[package]
name = 'stm32_v3'
version = "0.1.0"
edition = "2018"

[features]
default = ["default_panic", "f401"]
default_panic = []
heap = []
async = ["heap"]
f4 = []
f40 = ["f4"]
f401 = ["f40"]
f405 = ["f40"]
f407 = ["f40"]

[build-dependencies]
cc = "^1"

[dependencies.futures]
version = "^0.3.21"
default-features = false
features = ["alloc"]
